# math

./: .gitignore  DESIGN_DB.md  README.md  REFACTORING.md  UML_BEFORE_AFTER.md  main.py  pyproject.toml  requirements.txt
arithmetic-practice-dataproc/: .gitignore  DESIGN.md  README.md  main.py
arithmetic-practice-dataproc/src/: analyzer.py  exercise_builder.py  grader.py
arithmetic-practice-dataproc/tests/: conftest.py  test_csv_handler.py  test_models.py  test_practice_manager.py
arithmetic-practice-db/: .gitignore  requirements.txt
arithmetic-practice-db/tests/: test_db_connection.py  test_db_repository.py
arithmetic-practice-gui/: .gitignore  main.py  pyrightconfig.json
arithmetic-practice-gui/docs/: GUI_CLASS_DIAGRAM.md
arithmetic-practice-gui/tests/: test_gui_events.py
arithmetic-practice-oop/: .gitignore  UML.md
arithmetic-practice-oop/src/: __init__.py  operators.py  problem.py
arithmetic-practice-oop/tests/: __init__.py  test_constraints.py  test_generator.py  test_operators.py  (+1 more)
arithmetic-practice-refactored/: README.md
arithmetic-practice-web/: .gitignore  README.md  main.py  requirements.txt  run_web.py
src/: __init__.py  app.py  collection.py  constraints.py  csv_handler.py  display.py  exercise.py  formatter.py  generator.py  models.py  operators.py  practice_manager.py  problem.py  sheet.py
tests/: __init__.py  test_analyzer.py  test_collection.py  test_db_connection.py  test_db_repository.py  test_display.py  test_exercise_builder.py  test_formatter.py  test_grader.py  test_gui_events.py  test_gui_integration.py  test_problem.py
(+72 files in other folders)
